--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
@@ -11,12 +11,12 @@
             <div class="row">
                 <h2 class="col-sm-10">Quản Lý Tài Liệu</h2>
                 <div class="col-sm-2">
-                    <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addFileModal" style="margin-top:20px">
+                    <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#fileModal" style="margin-top:20px" onclick="clearModal()">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
-            <div class="modal fade" id="addFileModal" role="dialog">
+            <div class="modal fade" id="fileModal" role="dialog">
                 <div class="modal-dialog">
 
                     <!-- Modal content-->
@@ -32,7 +32,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                                     </div>
-                                    <input id="newName" type="text" class="form-control" placeholder="Nhập tên Tài Liệu">
+                                    <input id="newName" type="text" class="form-control file-title" placeholder="Nhập tên Tài Liệu">
                                 </div>
                                 <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="file-name-error">
                                     <p class="empty">Vui lòng nhập tên tài liệu</p>
@@ -44,26 +44,24 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-info" aria-hidden="true"></i>
                                     </div>
-                                    <textarea id="newDescription" type="text" class="form-control" placeholder="Nhập miêu tả về tài liệu"></textarea>
+                                    <textarea id="newDescription" type="text" class="form-control  file-description" placeholder="Nhập miêu tả về tài liệu"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-3 form-control-label">Đường dẫn tải:</label>
-                                <div class="col-sm-9 input-group">
-                                    <div class="input-group-addon">
-                                        <i class="fa fa-link" aria-hidden="true"></i>
+                                <div class="col-sm-9" style="padding-left: 0px;">
+                                    <div class="field">
+                                        <div class="control">
+                                            <button class="button" type="button" id="picker">Chọn file</button>
+                                            <input type="hidden" id="fileupload">
+                                        </div>
                                     </div>
-                                    <textarea id="newImageUrl" type="text" class="form-control" placeholder="Nhập đường dẫn của tài liệu"></textarea>
-                                </div>
-                                <div class="col-sm-3"></div>
-                                <div class="row col-sm-9">
-                                    <label>or</label>
-                                    <input type="file" id="myFile">
+                                    <div id="thumbnail-container" class="file-url"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Thêm</button>
+                            <button id="btn-add" type="button" class="btn btn-primary file-button file-id" data-dismiss="modal" style="margin-top:5px">Thêm</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                         </div>
                     </div>
@@ -104,57 +102,6 @@
             </div>
         </div>
 
-        <div class="modal fade" id="fileModal" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Chỉnh Sửa Tài Liệu</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Tên:</label>
-                            <div class="col-sm-9 input-group">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-briefcase" aria-hidden="true"></i>
-                                </div>
-                                <input type="text" class="form-control file-title">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Miêu tả:</label>
-                            <div class="col-sm-9 input-group">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-info" aria-hidden="true"></i>
-                                </div>
-                                <textarea type="text" class="form-control file-description"></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Đường dẫn:</label>
-                            <div class="col-sm-9 input-group">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-link" aria-hidden="true"></i>
-                                </div>
-                                <textarea type="text" class="form-control file-image"></textarea>
-                            </div>
-                            <div class="col-sm-3"></div>
-                            <div class="row col-sm-9">
-                                <label>or</label>
-                                <input type="file" id="myFile">
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button id="btn-save" type="submit" class="btn btn-primary file-id" data-dismiss="modal" style="margin-top:5px">Lưu</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
     </div>
 </div>
 
@@ -166,8 +113,23 @@
         function showModalFile(id, name, description, image) {
             $('.file-title').val(name);
             $('.file-description').val(description);
-            $('.file-image').val(image);
+            $('.file-url').val(image);
             $('.file-id').val(id);
+            $('#thumbnail-container').html(image);
+            $('#thumbnail-container').attr('style', 'padding-top: 10px;');
+            $('.modal-title').text('Chỉnh sửa tài liệu');
+            $('.file-button').text('Lưu');
+            $('.file-button').attr('id', 'btn-save');
+        }
+        function clearModal() {
+            $('.file-title').val('');
+            $('.file-description').val('');
+            $('#thumbnail-container').html("");
+            $('.file-url').val('');
+            $('.file-id').val('');
+            $('.modal-title').text('Thêm tài liệu');
+            $('.file-button').text('Thêm');
+            $('.file-button').attr('id', 'btn-add');
         }
 
         function delFile(id, name) {
@@ -222,6 +184,48 @@
                     }
                 ]
              });
+
+
+             //Filestack dùng để up hình
+             // Set up the picker
+             const client = filestack.init('AIA0Qk3iTSGzr9dIsuPdgz');
+             const options = {
+                 onUploadDone: updateForm,
+                 maxSize: 10 * 1024 * 1024,
+                 uploadInBackground: false,
+                 fromSources: ['local_file_system', 'imagesearch', 'facebook', 'instagram', 'dropbox', 'picasa', 'url']
+             };
+             const picker = client.picker(options);
+
+             // Get references to the DOM elements
+
+             const fileInput = document.getElementById('fileupload');
+             const btn = document.getElementById('picker');
+             const nameBox = document.getElementById('nameBox');
+             const urlBox = document.getElementById('urlBox');
+
+             // Add our event listeners
+
+             btn.addEventListener('click', function (e) {
+                 e.preventDefault();
+                 picker.open();
+             });
+
+
+
+             // Helper to overwrite the field input value
+
+             function updateForm(result) {
+                 const fileData = result.filesUploaded[0];
+                 fileInput.value = fileData.url;
+                 if (fileInput.value != null) {
+                     $('#thumbnail-container').val(fileInput.value);
+                     $('#thumbnail-container').html(fileInput.value);
+                     $('#thumbnail-container').attr('style', 'padding-top: 10px;');
+                 }
+                 // If file is resizable image, resize and embed it as a thumbnail preview
+             };
+
         });
 
     </script>
