--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/File/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/File/Index.cshtml
@@ -6,12 +6,15 @@
 @using HmsService.Models.Entities;
 @model EventCollection
 
+<div class="row" style="padding-top: 74px;">
+    <div class="col-md-12 text-center voting-title">
+        <h3>Tài liệu</h3>
+    </div>
+</div>
+
 @if (Model == null || Model.CollectionItems == null)
 {
-    <div class="collection-empty-title">
-        <h3>Hiện tại chưa có danh sách tài liệu</h3>
-    </div>
-
+        <h3 class="text-center">Hiện tại chưa có danh sách tài liệu</h3>
 }
 else
 {
@@ -62,7 +65,7 @@ else
         function showModalFile(name, description, fileUrl) {
             $('.file-title').html(name);
             $('.file-description').html(description);
-            $('.file-url').attr('onclick', 'window.open(' + "'" + fileUrl + "'" +')');
+            $('.file-url').attr('onclick', 'window.open(' + "'" + fileUrl + "'" + ')');
         }
     </script>
 }
