--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -6,12 +6,15 @@
 @using HmsService.Models.Entities;
 @model EventCollection
 
+<div class="row" style="padding-top: 74px;">
+    <div class="col-md-12 text-center voting-title">
+        <h3>Diễn giả</h3>
+    </div>
+</div>
+
 @if (Model == null || Model.CollectionItems == null)
 {
-    <div class="collection-empty-title">
-        <h3>Hiện tại chưa có danh sách diễn giả</h3>
-    </div>
-
+        <h3 class="text-center">Hiện tại chưa có danh sách diễn giả</h3>
 }
 else
 {
@@ -46,7 +49,7 @@ else
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-                <img class="speaker-img image-speaker-custom"/>
+                <img class="speaker-img image-speaker-custom" />
                 <p class="speaker-description"></p>
             </div>
             <div class="modal-footer">
