+ Làm login, logout (mới chỉ vô màn hình admin, chưa có màn hình system admin)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Register.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model CapstoneProjectAdmin.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_LayoutEvent.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
