--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/login.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/login.css
@@ -80,7 +80,7 @@ form {
     z-index: 2;
 }
 
-    form input {
+    form .form-input {
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
@@ -99,17 +99,17 @@ form {
         font-weight: 300;
     }
 
-        form input:hover {
+        form .form-input:hover {
             background-color: rgba(255, 255, 255, 0.4);
         }
 
-        form input:focus {
+        form .form-input:focus {
             background-color: white;
             width: 300px;
             color: #53e3a6;
         }
 
-    form button {
+    form .button {
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
