--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     /**/
 
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Thông tin sự kiện";
     //var listBannerImage = Model.EventCollections.FirstOrDefault(e => e.EventCollectionID == 1).CollectionItems;
 }
 @using HmsService.ViewModels;
