--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Trung tâm điều khiển";
     String urlApi = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
     int sessionId = 0;
     if (Model.Count() > 0)
