--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "QA";
+    ViewBag.Title = "Quản lý hỏi đáp";
     string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
     int eventId = ViewBag.EventId;
 }
