--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>@ViewBag.Title - Join.vn</title>
     @Scripts.Render("~/bundles/jquery")
     <!-- jQuery UI 1.11.4 -->
     <script src="~/Content/AdminLTE-master/bower_components/jquery-ui/jquery-ui.min.js"></script>
