--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Voting/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Quản lý bình chọn";
     //int eventId = Int32.Parse(ViewContext.RouteData.Values["id"].ToString());
     int eventId = ViewBag.EventId;
     string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
